--- a/generators/templates/generators/password.html
+++ b/generators/templates/generators/password.html
@@ -1,8 +1,17 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <div class="container text-center">
-<h1 class="alert alert-danger">Your Password Is:</h1>
-<h2 class="alert alert-success">{{ password }}</h2>
+<h1 class="alert alert-primary text-secondary">Your Password Is:</h1>
+<h2 class="alert alert-warning text-secondary">{{ password }}</h2>
 
 
-<a href="{% url 'home' %}" class="btn btn-warning" >Home</a>
+<a href="{% url 'home' %}" class="btn btn-secondary text-white" >Home</a>
+
+
+<script type="text/javascript">
+    function refresh(){
+      window.location.assign(window.location);
+    }
+  </script>
+
+<button type="submit" class="btn btn-secondary text-white" onclick="refresh()">Reload</button>
 </div>
